-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 7
-
Component/s: infrastructure
-
b94
-
generic
-
windows
When building JDK7 with Visual Studio 2008 Express Edition, the build fails in make/sun/jkernel:
# Running javah:
c:/work/dolphin.b76/bin/javah -bootclasspath c:/work/ie-build/classes -d c:/work/ie-build/tmp/sun/sun.jkernel/jkernel/CClassHead
ers/ \
sun.jkernel.DownloadManager sun.jkernel.Mutex sun.jkernel.Bundle sun.jkernel.BackgroundDownloader
C:/PROGRA~1/MICROS~1/Windows/v7.0/Bin/rc /l 0x409 /r -d "JDK_BUILD_ID=1.7.0-internal-debug-art_2009_11_23_17_39-b00" -d "JDK_CO
MPANY=Sun Microsystems, Inc." -d "JDK_COMPONENT=Java(TM) Platform SE binary" -d "JDK_VER=7.0.0.0" -d "JDK_COPYRIGHT=Copyright \x
A9 2009" -d "JDK_NAME=Java(TM) Platform SE 7 " -d "JDK_FVER=7,0,0,0" /D "JDK_FNAME=jkernel.dll" /D "JDK_INTERNAL_NAME=jkernel" /
D "JDK_FTYPE=0x2L" -Foc:/work/ie-build/tmp/sun/sun.jkernel/jkernel/obj_g/jkernel.res ../../../src/windows/native/sun/jkernel/ker
nel.rc
Microsoft (R) Windows (R) Resource Compiler Version 6.1.7600.16385
Copyright (C) Microsoft Corporation. All rights reserved.
../../../src/windows/native/sun/jkernel/version.rc(26) : fatal error RC1015: cannot open include file 'afxres.h'.
make: *** [c:/work/ie-build/tmp/sun/sun.jkernel/jkernel/obj_g/jkernel.res] Error 1
# Running javah:
c:/work/dolphin.b76/bin/javah -bootclasspath c:/work/ie-build/classes -d c:/work/ie-build/tmp/sun/sun.jkernel/jkernel/CClassHead
ers/ \
sun.jkernel.DownloadManager sun.jkernel.Mutex sun.jkernel.Bundle sun.jkernel.BackgroundDownloader
C:/PROGRA~1/MICROS~1/Windows/v7.0/Bin/rc /l 0x409 /r -d "JDK_BUILD_ID=1.7.0-internal-debug-art_2009_11_23_17_39-b00" -d "JDK_CO
MPANY=Sun Microsystems, Inc." -d "JDK_COMPONENT=Java(TM) Platform SE binary" -d "JDK_VER=7.0.0.0" -d "JDK_COPYRIGHT=Copyright \x
A9 2009" -d "JDK_NAME=Java(TM) Platform SE 7 " -d "JDK_FVER=7,0,0,0" /D "JDK_FNAME=jkernel.dll" /D "JDK_INTERNAL_NAME=jkernel" /
D "JDK_FTYPE=0x2L" -Foc:/work/ie-build/tmp/sun/sun.jkernel/jkernel/obj_g/jkernel.res ../../../src/windows/native/sun/jkernel/ker
nel.rc
Microsoft (R) Windows (R) Resource Compiler Version 6.1.7600.16385
Copyright (C) Microsoft Corporation. All rights reserved.
../../../src/windows/native/sun/jkernel/version.rc(26) : fatal error RC1015: cannot open include file 'afxres.h'.
make: *** [c:/work/ie-build/tmp/sun/sun.jkernel/jkernel/obj_g/jkernel.res] Error 1